@@ -52,6 +52,7 @@ t/hints.t
 t/INST.t
 t/INST_PREFIX.t
 t/Install.t
+t/installbase.t
 t/Installed.t
 t/lib/MakeMaker/Test/Setup/BFD.pm
 t/lib/MakeMaker/Test/Setup/Problem.pm
